[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Builders/SniperBuilder.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/World/World.gd" type="Script" id=2]
[ext_resource path="res://src/World/Buttons/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/World/Sprites/Background.png" type="Texture" id=4]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;


uniform float speed = 1;


void fragment () {
	COLOR = texture(TEXTURE, vec2(UV.x + TIME * speed, UV.y - TIME * speed));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 3 )
shader_param/speed = 1.0

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.768627 )
material = SubResource( 2 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 320, 180 )
region_filter_clip = true

[node name="SniperBuilder" parent="." instance=ExtResource( 1 )]
position = Vector2( 158, 96 )

[node name="Label" type="Label" parent="."]
margin_left = 2.0
margin_top = 63.0
margin_right = 68.0
margin_bottom = 77.0
text = "Chaveiros "

[node name="ScopesButtons" type="ScrollContainer" parent="."]
margin_left = 246.0
margin_top = 80.0
margin_right = 308.0
margin_bottom = 160.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScopesButtons"]
margin_right = 62.0
margin_bottom = 20.0
rect_min_size = Vector2( 62, 0 )

[node name="Button" parent="ScopesButtons/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 62.0
text = "Empty"

[node name="Label2" type="Label" parent="."]
margin_left = 253.0
margin_top = 62.0
margin_right = 298.0
margin_bottom = 76.0
text = "Scopes"

[node name="ChaveirosButtons" type="ScrollContainer" parent="."]
margin_left = 2.0
margin_top = 80.0
margin_right = 64.0
margin_bottom = 160.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ChaveirosButtons"]
margin_right = 62.0
margin_bottom = 20.0
rect_min_size = Vector2( 62, 0 )

[node name="Button" parent="ChaveirosButtons/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 62.0
text = "Empty"

[connection signal="button_down" from="ScopesButtons/VBoxContainer/Button" to="." method="remove_scope"]
[connection signal="button_down" from="ChaveirosButtons/VBoxContainer/Button" to="." method="remove_chaveiro"]
